--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@nextui-org/react": "^2.2.9",
 		"@radix-ui/react-scroll-area": "^1.0.5",
 		"@radix-ui/react-select": "^2.0.0",
+		"@radix-ui/react-separator": "^1.0.3",
 		"@radix-ui/react-slot": "^1.0.2",
+		"@vercel/kv": "^1.0.1",
 		"class-variance-authority": "^0.7.0",
+		"cloudinary": "^1.41.1",
 		"clsx": "^2.0.0",
 		"dotenv": "^16.3.1",
+		"framer-motion": "^10.16.16",
 		"lucide-react": "^0.298.0",
 		"next": "14.0.4",
 		"next-themes": "^0.2.1",
