--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@radix-ui/react-separator": "^1.0.3",
 		"@radix-ui/react-slot": "^1.0.2",
 		"@vercel/kv": "^1.0.1",
+		"@vercel/speed-insights": "^1.0.2",
 		"class-variance-authority": "^0.7.0",
 		"cloudinary": "^1.41.1",
 		"clsx": "^2.0.0",
